# aws-greengrass-core-sdk-c

./: CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE.txt  README.md
aws-greengrass-core-sdk-c/: CMakeLists.txt
aws-greengrass-core-sdk-c-example/: CMakeLists.txt  hello_world.c  lambda.c  publish.c  secretsmanager.c  shadow.c  simple_handler.c
aws-greengrass-core-sdk-c-example/invoke/: README.md  invokee.c  invoker.c
aws-greengrass-core-sdk-c-example/tes/: CMakeLists.txt  README.md  main.c  tes.cpp  tes.h
aws-greengrass-core-sdk-c/include/: greengrasssdk.h
aws-greengrass-core-sdk-c/lib/: greengrasssdk.c
aws-greengrass-core-sdk-c/version/: greengrasssdk_versions.map
cmake/: Findaws-greengrass-core-sdk-c.cmake
docs/: annotated.html  classes.html  dir_552abaaffbab27d5fce1f05702d9af04.html  dir_ed8af33d969b0d2cb53b90a2ac9388fe.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  greengrasssdk_8h.html  greengrasssdk_8h_source.html  index.html  md_CHANGELOG.html  pages.html  structgg__invoke__options.html  structgg__lambda__context.html  structgg__request__result.html
docs/search/: all_0.js  all_1.js  all_2.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js
